Header done, img needs improvement and I working on the main section.

--- a/index.html
+++ b/index.html
@@ -45,19 +45,24 @@
     <!-- MAIN -->
     <main>
         <div class="container_image">
-            <img src="" alt="">
-            <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste necessitatibus autem debitis fuga quam explicabo ut suscipit itaque molestias error! Neque soluta aliquid numquam quidem provident assumenda possimus ea quasi.</p>
+            <img src="./assets/images/bkg1.png" alt="">
+            <!--     <div class="img_text">
+                <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste necessitatibus autem debitis fuga quam explicabo ut suscipit itaque molestias error! Neque soluta aliquid numquam quidem provident assumenda possimus ea quasi.</p>
+            </div> -->
         </div>
+
 
         <div class="middle_text">
             <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, aliquid?</h4>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. A numquam explicabo animi labore nostrum rerum, iure quas perferendis, aliquid exercitationem error eaque quae! Nesciunt voluptate nulla veritatis consequuntur ipsam nihil.</p>
         </div>
+
+        <div id="projects_header">
+            <h2>Projects</h2>
+        </div>
         <div class="container_projects">
-            <div id="projects_header">
-                <h2>Projects</h2>
-            </div>
+
             <div class="articles">
                 <div class="weeks">
                     <div class="week">
@@ -95,7 +100,7 @@
         <div class="footer">
             <div class="container_footer">
                 <div class="footer_logo">
-                    <img src="" alt="footer_logo">
+                    <img src="./assets/images/logoV.jpg" alt="footer_logo">
                 </div>
                 <div class="footer_nav">
                     <ul>
