week 1 and week 2 done. Next step: footer

--- a/index.html
+++ b/index.html
@@ -52,42 +52,101 @@
             </div> -->
         </div>
 
+        <div class="projects">
+            <div class="middle_text">
+                <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, aliquid?</h4>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. A numquam explicabo animi labore nostrum rerum, iure quas perferendis, aliquid exercitationem error eaque quae! Nesciunt voluptate nulla veritatis consequuntur ipsam nihil.</p>
+            </div>
 
-        <div class="middle_text">
-            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, aliquid?</h4>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. A numquam explicabo animi labore nostrum rerum, iure quas perferendis, aliquid exercitationem error eaque quae! Nesciunt voluptate nulla veritatis consequuntur ipsam nihil.</p>
-        </div>
+            <div id="projects_header">
+                <h2>Projects</h2>
+            </div>
+            <div class="container_projects">
 
-        <div id="projects_header">
-            <h2>Projects</h2>
-        </div>
-        <div class="container_projects">
+                <div class="articles">
+                    <div class="weeks project_boxes">
+                        <div class="week">
+                            <div id="img_wk2">
+                                <img src="./assets/images/js_img.png" alt="">
+                            </div>
+                            <h3>Week 1</h3>
+                            <p>Learning and training the fundamentals of JavaScript. (Functions, conditionals, operators...)</p>
+                            <a href="https://github.com/Vinicius-Olivi/challengesresult" target="_blank">Repository</a>
+                        </div>
 
-            <div class="articles">
-                <div class="weeks">
-                    <div class="week">
-                        <h3>Week 1</h3>
-                        <img src="" alt="week1">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quasi.</p>
-                        <a href="">Read More</a>
-                    </div>
-                    <div class="week">
-                        <h3>Week 2</h3>
-                        <img src="" alt="week2">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quasi.</p>
-                        <a href="">Read More</a>
-                    </div>
-                    <div class="week">
-                        <h3>Week 3</h3>
-                        <img src="" alt="week3">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quasi.</p>
-                        <a href="">Read More</a>
+                        <div class="week project_boxes">
+                            <div id="img_wk2">
+                                <img src="./assets/images/background2.jpg" alt="">
+                            </div>
+                            <h3>Week 2</h3>
+                            <p>Building a website project of a journal to track my improvement during the boot camp!</p>
+                            <a href="https://vinicius-olivi.github.io/project-week2-growth/" target="_blank">Journal</a>
+                        </div>
+
+                        <div class="week">
+                            <h3>Week 3</h3>
+                            <img src="" alt="week3">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quasi.</p>
+                            <a href="">Read More</a>
+                        </div>
                         <div class="week">
                             <h3>Week 4</h3>
                             <img src="" alt="week4">
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quasi.</p>
                             <a href="">Read More</a>
                         </div>
+
+                        <div class="week">
+                            <h3>Week 4</h3>
+                            <img src="" alt="week4">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quasi.</p>
+                            <a href="">Read More</a>
+
+                        </div>
+
+                        <div class="week">
+                            <h3>Week 4</h3>
+                            <img src="" alt="week4">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quasi.</p>
+                            <a href="">Read More</a>
+
+                        </div>
+
+                        <div class="week">
+                            <h3>Week 4</h3>
+                            <img src="" alt="week4">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quasi.</p>
+                            <a href="">Read More</a>
+
+                        </div>
+
+                        <div class="week">
+                            <h3>Week 4</h3>
+                            <img src="" alt="week4">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quasi.</p>
+                            <a href="">Read More</a>
+
+                        </div>
+
+                        <div class="week">
+                            <h3>Week 4</h3>
+                            <img src="" alt="week4">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quasi.</p>
+                            <a href="">Read More</a>
+
+                        </div>
+
+                        <div class="week">
+                            <h3>Week 4</h3>
+                            <img src="" alt="week4">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quasi.</p>
+                            <a href="">Read More</a>
+
+                        </div>
+
+
+
+
                     </div>
                 </div>
 
