week 1 and week 2 done. Some media query was made. Next step: footer

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <div class="articles">
                     <div class="weeks project_boxes">
                         <div class="week">
-                            <div id="img_wk2">
+                            <div id="img_wk1">
                                 <img src="./assets/images/js_img.png" alt="">
                             </div>
                             <h3>Week 1</h3>
@@ -83,65 +83,94 @@
                             <a href="https://vinicius-olivi.github.io/project-week2-growth/" target="_blank">Journal</a>
                         </div>
 
-                        <div class="week">
-                            <h3>Week 3</h3>
-                            <img src="" alt="week3">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quasi.</p>
-                            <a href="">Read More</a>
-                        </div>
-                        <div class="week">
-                            <h3>Week 4</h3>
-                            <img src="" alt="week4">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quasi.</p>
-                            <a href="">Read More</a>
+                        <div class="week project_boxes">
+                            <div id="img_wk2">
+                                <img src="./assets/images/background1.jpg" alt="">
+                            </div>
+                            <h3>Week 2</h3>
+                            <p>Building a website project of a journal to track my improvement during the boot camp!</p>
+                            <a href="https://vinicius-olivi.github.io/project-week2-growth/" target="_blank">Journal</a>
                         </div>
 
-                        <div class="week">
-                            <h3>Week 4</h3>
-                            <img src="" alt="week4">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quasi.</p>
-                            <a href="">Read More</a>
-
+                        <div class="week project_boxes">
+                            <div id="img_wk2">
+                                <img src="./assets/images/background1.jpg" alt="">
+                            </div>
+                            <h3>Week 2</h3>
+                            <p>Building a website project of a journal to track my improvement during the boot camp!</p>
+                            <a href="https://vinicius-olivi.github.io/project-week2-growth/" target="_blank">Journal</a>
                         </div>
 
-                        <div class="week">
-                            <h3>Week 4</h3>
-                            <img src="" alt="week4">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quasi.</p>
-                            <a href="">Read More</a>
-
+                        <div class="week project_boxes">
+                            <div id="img_wk2">
+                                <img src="./assets/images/background4.jpg" alt="">
+                            </div>
+                            <h3>Week 2</h3>
+                            <p>Building a website project of a journal to track my improvement during the boot camp!</p>
+                            <a href="https://vinicius-olivi.github.io/project-week2-growth/" target="_blank">Journal</a>
                         </div>
 
-                        <div class="week">
-                            <h3>Week 4</h3>
-                            <img src="" alt="week4">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quasi.</p>
-                            <a href="">Read More</a>
-
+                        <div class="week project_boxes">
+                            <div id="img_wk2">
+                                <img src="./assets/images/background4.jpg" alt="">
+                            </div>
+                            <h3>Week 2</h3>
+                            <p>Building a website project of a journal to track my improvement during the boot camp!</p>
+                            <a href="https://vinicius-olivi.github.io/project-week2-growth/" target="_blank">Journal</a>
                         </div>
 
-                        <div class="week">
-                            <h3>Week 4</h3>
-                            <img src="" alt="week4">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quasi.</p>
-                            <a href="">Read More</a>
-
+                        <div class="week project_boxes">
+                            <div id="img_wk2">
+                                <img src="./assets/images/background3.jpg" alt="">
+                            </div>
+                            <h3>Week 2</h3>
+                            <p>Building a website project of a journal to track my improvement during the boot camp!</p>
+                            <a href="https://vinicius-olivi.github.io/project-week2-growth/" target="_blank">Journal</a>
                         </div>
 
-                        <div class="week">
-                            <h3>Week 11</h3>
-                            <img src="" alt="week4">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quasi.</p>
-                            <a href="">Read More</a>
-
+                        <div class="week project_boxes">
+                            <div id="img_wk2">
+                                <img src="./assets/images/background3.jpg" alt="">
+                            </div>
+                            <h3>Week 2</h3>
+                            <p>Building a website project of a journal to track my improvement during the boot camp!</p>
+                            <a href="https://vinicius-olivi.github.io/project-week2-growth/" target="_blank">Journal</a>
                         </div>
 
-                        <div class="week">
-                            <h3>Week 12</h3>
-                            <img src="" alt="week4">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quasi.</p>
-                            <a href="">Read More</a>
+                        <div class="week project_boxes">
+                            <div id="img_wk2">
+                                <img src="./assets/images/background1.jpg" alt="">
+                            </div>
+                            <h3>Week 2</h3>
+                            <p>Building a website project of a journal to track my improvement during the boot camp!</p>
+                            <a href="https://vinicius-olivi.github.io/project-week2-growth/" target="_blank">Journal</a>
+                        </div>
 
+                        <div class="week project_boxes">
+                            <div id="img_wk2">
+                                <img src="./assets/images/background4.jpg" alt="">
+                            </div>
+                            <h3>Week 2</h3>
+                            <p>Building a website project of a journal to track my improvement during the boot camp!</p>
+                            <a href="https://vinicius-olivi.github.io/project-week2-growth/" target="_blank">Journal</a>
+                        </div>
+
+                        <div class="week project_boxes">
+                            <div id="img_wk2">
+                                <img src="./assets/images/background4.jpg" alt="">
+                            </div>
+                            <h3>Week 2</h3>
+                            <p>Building a website project of a journal to track my improvement during the boot camp!</p>
+                            <a href="https://vinicius-olivi.github.io/project-week2-growth/" target="_blank">Journal</a>
+                        </div>
+
+                        <div class="week project_boxes">
+                            <div id="img_wk2">
+                                <img src="./assets/images/background1.jpg" alt="">
+                            </div>
+                            <h3>Week 2</h3>
+                            <p>Building a website project of a journal to track my improvement during the boot camp!</p>
+                            <a href="https://vinicius-olivi.github.io/project-week2-growth/" target="_blank">Journal</a>
                         </div>
 
 
@@ -149,6 +178,7 @@
 
                     </div>
                 </div>
+            </div>
 
     </main>
 
