week 1 and week 2 done. Some media query was made. Next step: footer

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
         <nav>
 
             <ul>
-                <a href="/project_week2/index.html">
+                <a href="index.html">
                     <li>Home</li>
                 </a>
-                <a href="/project_week2/cv.html">
+                <a href="cv.html">
                     <li>History</li>
                 </a>
-                <a href="/project_week2/contact.html">
+                <a href="contact.html">
                     <li>Contact Me</li>
                 </a>
             </ul>
