add a footer on the contact and history pages

--- a/contact.html
+++ b/contact.html
@@ -65,6 +65,24 @@
 
         </form>
     </div>
+
+    <!-- fOOTER -->
+    <footer>
+        <div class="footer">
+            <div class="container_footer">
+                <div class="footer_logo">
+                    <img src="./assets/images/logoV.jpg" alt="footer_logo">
+                </div>
+                <div class="footer_nav">
+                    <ul>
+                        <a href=""><img src="" alt="">Linkedin</a>
+                        <a href=""><img src="" alt="">Instagram</a>
+                        <a href=""><img src="" alt="">Facebook</a>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
